[tool.poetry]
name = "fastclusteringdiarizer"
version = "0.1.0"
description = ""
authors = ["bghorvath"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10 <3.12"
scipy = "^1.10.0"
scikit-learn = "^1.2.1"
numpy = "^1.24.2"
pandas = "^1.5.3"
plotly = "^5.13.0"
ipykernel = "^6.21.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
